--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,18 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
 <link rel="stylesheet" href="styles.css">
+<!-- Fonts -->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+
 <title>Frontend Mentor | QR code component</title>
+
+<div class="card">
+  <img src="images/image-qr-code.png" alt="QR code" class="qr-code">
+  <h1 class="title">Improve your front-end skills by building projects</h1>
+  <p class="subtitle">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+</div>
 
 <!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
