--- a/public/index.html
+++ b/public/index.html
@@ -19,8 +19,8 @@
     next level</p>
 </div>
 
-<div class="attribution">
+<small class="attribution">
   Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend
     Mentor</a>.
   Coded by <a href="https://www.frontendmentor.io/profile/johnnygerard">Johnny Gérard</a>.
-</div>
+</small>
