--- a/public/index.html
+++ b/public/index.html
@@ -12,17 +12,19 @@
 
 <title>Frontend Mentor | QR code component</title>
 
-<div class="card">
+<main class="card">
   <img src="images/image-qr-code.png" alt="QR code" class="qr-code">
   <hgroup class="hgroup">
     <h1 class="title">Improve your front-end skills by building projects</h1>
     <p class="subtitle">Scan the QR code to visit Frontend Mentor and take your coding skills to the
       next level</p>
   </hgroup>
-</div>
+</main>
 
-<small class="attribution">
-  Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend
-    Mentor</a>.
-  Coded by <a href="https://www.frontendmentor.io/profile/johnnygerard">Johnny Gérard</a>.
-</small>
+<footer class="attribution">
+  <small>
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend
+      Mentor</a>.
+    Coded by <a href="https://www.frontendmentor.io/profile/johnnygerard">Johnny Gérard</a>.
+  </small>
+</footer>
