--- a/public/index.html
+++ b/public/index.html
@@ -14,11 +14,11 @@
 
 <main class="card">
   <img src="images/image-qr-code.png" alt="QR code" class="qr-code">
-  <hgroup class="hgroup">
+  <div class="hgroup">
     <h1 class="title">Improve your front-end skills by building projects</h1>
     <p class="subtitle">Scan the QR code to visit Frontend Mentor and take your coding skills to the
       next level</p>
-  </hgroup>
+    </div>
 </main>
 
 <footer class="attribution">
